<resources>
    <string name="app_name">Get Taxi - Driver</string>
    <string name="password">password</string>
    <string name="enter">enter</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id">ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="credit_card_number">Credit-Card Number</string>
    <string name="sign_up">Sign up</string>
    <string name="not_registered">Not yet registered? Sign up</string>
    <string name="username">email</string>
    <string name="error_empty_mail">Please enter your email address</string>
    <string name="error_empty_password">Please enter your password</string>
    <string name="incorrect_details">email or password incorrect</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="empty_field">Please fill out this field</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_id">invalid ID</string>
    <string name="remember_me">remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="distance">Distance:</string>
    <string name="km">km</string>
    <string name="item_source">Source:</string>
    <string name="item_destination">Destination:</string>
    <string name="price">Price:</string>
    <string name="coin">ILS</string>
    <string name="send_mail">Send Email</string>
    <string name="call_passenger">Call</string>
    <string name="sms_passenger">"Send message "</string>
    <string name="take_drive">Take The Drive</string>
    <string name="pass_progress">pass progress</string>
    <string name="Taxi_On_The_Way">The taxi you ordered is on your way to you!</string>
    <string name="share_message">I also use Get Taxi. Join me and enjoy advanced taxi services through your smartphone!</string>
    <string name="share_title">Share Get taxi with:</string>
    <string name="welcome_driver">, welcome!</string>
    <string name="there_are_currently">There are currently</string>
    <string name="drives_available">drives available</string>
    <string name="payment">payment:</string>
    <string name="end_drive">end drive:</string>
    <string name="nav_home">Home</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_my_drives">My Drives</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_share">Share</string>
    <string name="nav_log_off">Log off</string>
    <string name="filter">filter</string>
    <string name="new_reqest">New drive received</string>
    <string name="relevent_drive">You\'ve received a new drive that\'s relevant to you!</string>
    <string name="made_by">Made By:</string>
    <string name="david_yair">David Rakovsky and Yair Ben-David</string>
    <string name="lecturer">Lecturer:</string>
    <string name="eliezer_gensburger">Eliezer Gensburger</string>
    <string name="course">Course:</string>
    <string name="workshop">Workshop in Java 2019</string>
</resources>
